# volas

./: Cargo.toml
config/: config.toml
volas_bin/: Cargo.toml
volas_bin/src/: main.rs
volas_common/: Cargo.toml
volas_common/src/: app_error.rs  app_response.rs  lib.rs
volas_common/src/middleware/: jwt.rs
volas_configs/: Cargo.toml
volas_configs/src/: config_cert.rs  config_configs.rs  config_database.rs  config_jwt.rs  config_log.rs  config_server.rs  config_surrealdb.rs  lib.rs  loader_config.rs
volas_infra/: Cargo.toml
volas_infra/src/: db.rs  error.rs  lib.rs
volas_migrations/: Cargo.toml
volas_migrations/migrations/01-friend_car/: up.surql
volas_migrations/src/: error.rs  lib.rs  migration.rs
volas_system/: Cargo.toml
volas_system/src/: lib.rs
volas_system/src/api/: login.rs  mod.rs  sys_user.rs  system_info.rs
volas_system/src/models/: mod.rs  sys_user.rs
volas_system/src/services/: mod.rs  sys_user_service.rs  sys_user_service_impl.rs
volas_utils/: Cargo.toml
volas_utils/src/: sysinfo.rs
volas_web/: Cargo.toml
volas_web/src/: lib.rs  routers.rs
