[workspace]
resolver = "2"
members = [
  "volas_configs",
  "volas_infra",
  "volas_bin",
  "volas_web",
  "volas_utils"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1 
debug = false 
lto = true 
opt-level = "z" # Optimize for size.
panic = 'abort' 
# strip = "symbols" # none(false) debuginfo symbols(true).

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["fankai Liu <liufankai137@outlook.com>"]
description = "code2"

[workspace.dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = [] }
async-trait = "0.1.74"
clia-tracing-config = "0.2.5"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.58", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.48"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16", features = ["derive"] }
sea-orm = {version = "0", features = ["macros", "runtime-tokio-native-tls","with-chrono"]}
sysinfo = "0.29.11"