[package]
name = "volas_bin"
default-run = "volas_bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
salvo = { workspace = true }
configs = { package = "volas_configs", path = "../volas_configs" }
infra = { package = "volas_infra", path = "../volas_infra" }
system = {package = "volas_system", path = "../volas_system" }
common = {package = "volas_common", path = "../volas_common" }
migrations = {package = "volas_migrations", path = "../volas_migrations" }