[package]
name = "volas_infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = { package = "volas_configs", path = "../volas_configs" }
tokio={workspace=true}
thiserror={workspace=true}
async-trait={workspace=true}
surrealdb = {workspace=true}
