[package]
name = "volas_migrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infra = { package = "volas_infra", path = "../volas_infra" }
thiserror={workspace=true}
surrealdb-migrator = {workspace=true}
include_dir =  {workspace=true}
surrealdb = {workspace=true}