[package]
name = "volas_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "volas_common", path = "../volas_common" }
utils = { package = "volas_utils", path = "../volas_utils" }
salvo = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }