[package]
name = "volas_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = { workspace = true }
once_cell = {workspace = true}
serde = {workspace = true}